samples/_failures_safe/1761594643_da9c51_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b6d6c49.c: In function ‘main’:
./samples/SAFE/__tmp_7b6d6c49.c:153:5: error: expected declaration or statement at end of input
  153 |     printf("Compressed size: %zu bytes\n", compressed.size);
      |     ^~~~~~
